# heisenberg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATA_STRATEGY.md  TECHNICAL_ANALYSIS.md  TESTING.md  data_distribution_plan.md  env.yml  justfile  main.py  pyproject.toml  readme.md  run_tests.py  rustfmt.toml  test.ipynb  test.py  test_script.py  why_to_numpy_order_c.ipynb
.github/actions/setup/: action.yaml
.github/workflows/: ci.yaml  release.yaml
crates/heisenberg/: Cargo.toml  build.rs
crates/heisenberg-data-processing/: Cargo.toml
crates/heisenberg-data-processing/src/: error.rs  lib.rs  test_data.rs
crates/heisenberg-data-processing/src/embedded/: mod.rs
crates/heisenberg-data-processing/src/processed/: create_admin_search.rs  create_place_search.rs  mod.rs
crates/heisenberg-data-processing/src/raw/: all_countries.rs  country_info.rs  feature_codes.rs  fetch.rs  mod.rs
crates/heisenberg/examples/: administrative_search.rs  basic_search.rs  batch_processing.rs  configuration.rs  data_sources.rs  location_resolution.rs
crates/heisenberg/src/: core.rs  error.rs  lib.rs  main.rs
crates/heisenberg/src/backfill/: entry.rs  mod.rs  resolve.rs
crates/heisenberg/src/backfill/entry/: basic.rs  generic.rs  mod.rs
crates/heisenberg/src/config/: mod.rs
crates/heisenberg/src/data/: mod.rs
crates/heisenberg/src/data/embedded/: mod.rs
crates/heisenberg/src/index/: mod.rs
crates/heisenberg/src/python/: mod.rs
crates/heisenberg/src/search/: admin_search.rs  common.rs  mod.rs  place_search.rs  search_orchestration.rs
examples/: admin_search.rs  administrative_search.rs  basic_search.rs  batch_processing.rs  bulk_search.rs  configuration.rs  custom_config.rs  download_geonames.rs  location_resoloution.rs  location_resolution.rs  oauth2_callback.rs  place_search_with_context.rs  quick_dev.rs  smart_flexible_search.rs
examples_old/: manual_search.rs  smart_search.rs  structured_search.rs
python/: README.md
python/examples/: 01_basic_usage.py  02_configuration.py  03_batch_processing.py  04_resolution_backfill.py  05_advanced_features.py  README.md  basic_usage.py
python/heisenberg/: __init__.py  _internal.py  heisenberg.py
python/tests/: test_basic.py  test_bindings.py  test_edge_cases.py  test_integration.py
scripts/: create_curated_dataset.py
sql/: create_admin_search_table.sql  create_node_entity.sql  create_places_search_table.sql  create_relation_IsIn.sql  create_table_admin0.sql  create_table_admin1CodesASCII.sql  create_table_admin2Codes.sql  create_table_adminCode5.sql  create_table_allCountries.sql  create_table_alternateNamesV2.sql  create_table_country.sql  create_table_countryInfo.sql  create_table_equivalent.sql  create_table_featureCodes.sql  create_table_hierarchy.sql  create_table_iso_languagecodes.sql  create_table_shapes.sql  create_table_timeZones.sql  create_table_unique_ids.sql  create_unified_admin_table.sql  create_view_*_FTS.sql  create_view_*_NODES.sql  create_view_cities.sql  create_view_locations_full.sql  fts.sql
src/: core.rs  lib.rs  main.rs  service.rs  tantivy_index.rs
src/backfill/: enrichment.rs  mod.rs  resolve.rs
src/backfill/entry/: basic.rs  generic.rs  mod.rs
src/config/: mod.rs
src/data/: admin_search.rs  create_admin_search.rs  create_place_search.rs  mod.rs  test_data.rs
src/data/processed/: create_admin_search.rs  create_place_search.rs  mod.rs
src/data/raw/: all_countries.rs  country_info.rs  feature_codes.rs  fetch.rs  mod.rs
src/index/: mod.rs
src/python/: mod.rs
src/search/: admin_search.rs  fts_search.rs  mod.rs  place_search.rs  search_orchestration.rs  service.rs  smart_flexible_search.rs
src/search/location_search/: admin_search.rs  enrichment.rs  mod.rs  place_search.rs  smart_flexible_search.rs
tests/: integration_tests.rs
