[package]
name = "heisenberg"
version = "0.1.0"
edition = "2024"
authors = ["Sam B"]
license = "MIT"
repository = "https://github.com/SamBroomy/heisenberg"
homepage = "https://github.com/SamBroomy/heisenberg"
readme = "README.md"
description = "Backfill and enrich unstructured location data into structured data using the Geonames Dataset."
categories = ["science::geo"]
keywords = [
    "geonames",
    "polars",
    "location-enrichment",
    "data-processing",
    "geocoding",
    "location",
    "parsing",
]

[lib]
name = "heisenberg"
crate-type = ["cdylib", "rlib"]

[features]
default = ["download_data"]
download_data = ["reqwest", "tokio", "indicatif", "futures"]
python = [
    "dep:pyo3",
    "dep:pyo3-polars",
    "dep:pythonize",
    "dep:pyo3-log",
    "serde",
]
serde = ["dep:serde"]


[dependencies]
ahash = "0.8.12"
anyhow = "1.0"
indicatif = { version = "0.17.11", optional = true }
itertools = "0.14"
once_cell = "1.21.3"
polars = { version = "0.48", features = [
    "lazy",
    "parquet",
    "log",
    "strings",
    "round_series",
    "regex",
    "is_in",
    "fmt",
    "dtype-u8",
    "dtype-u16",
    "dtype-struct",
    "dtype-categorical",
    "trigonometry",
    "csv",
    "semi_anti_join",
    "cse",

    #"performant",
    "dtype-i128",
    #"streaming",
] }
rapidfuzz = "0.5.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["stream"], optional = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
], optional = true }
futures = { version = "0.3", optional = true }
tantivy = "0.24"
tempfile = "3"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zip = "4"
thiserror = "2.0"
pyo3 = { version = "0.24", default-features = false, features = [
    "extension-module",
    "macros",
], optional = true }
pyo3-polars = { version = "0.21.0", optional = true }
true = { version = "0.1.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
pythonize = { version = "0.24.0", optional = true }
pyo3-log = { version = "0.12.4", optional = true }

[dev-dependencies]
chrono = "0.4.41"
num-traits = "0.2.19"
