[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.89"
version = "0.1.0"
authors = ["SamBroomy"]
license = "MIT"
repository = "https://github.com/SamBroomy/heisenberg"
homepage = "https://github.com/SamBroomy/heisenberg"
readme = "readme.md"
description = "Backfill and enrich unstructured location data into structured data using the Geonames Dataset."
categories = ["science::geo"]
keywords = [
    "geonames",
    "polars",
    "location-enrichment",
    "data-processing",
    "geocoding",
    "location",
    "parsing",
]


[workspace.dependencies]
# Shared dependencies across workspace
polars = { version = "0.48", features = [
    "lazy",
    "parquet",
    "log",
    "strings",
    "round_series",
    "regex",
    "is_in",
    "fmt",
    "dtype-u8",
    "dtype-u16",
    "dtype-struct",
    "dtype-categorical",
    "trigonometry",
    "csv",
    "semi_anti_join",
    "cse",
    "dtype-i128",
] }
tempfile = "3"
tracing = { version = "0.1", features = ["log"] }
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14"
zip = "4"
chrono = { version = "0.4.41", features = ["serde"] }
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
] }
futures = "0.3"
indicatif = "0.17.11"

ahash = "0.8.12"
rapidfuzz = "0.5"
rayon = "1.10"
regex = "1.11"
tantivy = "0.24"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Python bindings (optional)
pyo3 = { version = "0.24", default-features = false, features = [
    "extension-module",
    "macros",
] }
pyo3-polars = { version = "0.21.0" }
pythonize = { version = "0.24.0" }
pyo3-log = { version = "0.12.4" }
num-traits = "0.2"
