[project]
name = "heisenberg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Rust"]
dependencies = ["maturin>=1.8.6", "polars>=1"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
features = ["python", "test_data"]
python-source = "python"
