[package]
name = "heisenberg-data-processing"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = "MIT"
description = "Data processing pipeline for Heisenberg location enrichment library"
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
polars = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Additional dependencies for data processing
itertools = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true, features = ["stream"], optional = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "fs",
    "macros",
    "io-util",
], optional = true }
futures = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
directories = { workspace = true, optional = true }

[dev-dependencies]
num-traits = { workspace = true }

[features]
system-dirs = ["directories"]
default = ["download_data"]
download_data = ["reqwest", "tokio", "indicatif", "futures"]

[lints]
workspace = true
