[package]
name = "heisenberg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme = "../../README.md"
keywords.workspace = true
categories.workspace = true

build = "build.rs"


[lib]
name = "heisenberg"
crate-type = ["cdylib", "rlib"]

[features]
default = ["download_data", "system-dirs"]
download_data = ["heisenberg-data-processing/download_data"]
system-dirs = ["heisenberg-data-processing/system-dirs"]
python = ["dep:pyo3", "dep:pyo3-polars", "dep:pyo3-log", "serde"]
serde = ["dep:serde"]

[dependencies]
# Workspace dependencies
once_cell = { workspace = true }
polars = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }

# Data processing subcrate
heisenberg-data-processing = { workspace = true }

# Main crate specific dependencies
ahash = { workspace = true }
itertools = { workspace = true }
rapidfuzz = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
tantivy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
bytes = { workspace = true }

# Python bindings (optional)
pyo3 = { workspace = true, default-features = false, features = [
    "extension-module",
    "macros",
], optional = true }
pyo3-polars = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }

[build-dependencies]
heisenberg-data-processing = { workspace = true, features = ["download_data"] }
polars = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
